Fikse openapi spec og kildegenereringsconfig
